--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,11 +4,9 @@
 
 
 /// Copy text family
-/// @type List
 $font-text: 'Roboto', sans-serif;
 
 /// Title and logo font family
-/// @type List
 $font-title: 'Shrikhand', cursive;
 
 /// Font weight
@@ -16,6 +14,8 @@ $font-light: 300;
 $font-medium: 500;
 $font-bold: 700;
 
+/// Font colors
+$font-color-variant: hsla(0, 0, 0, 21); /* à revoir: hue saturation lightness opacity */
 
 
 /// Colors
@@ -24,11 +24,11 @@ $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $background-color: #F6F6F6;
 
-
+///Shadow colors
+$shadow-color: hsla(0, 0%, 0%, 0.15);
 
 /// Container's maximum width
-/// @type Length
-$max-width: 1180px;
+$max-width: 1920px;
 
 
 
