--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,8 +3,7 @@
 // -----------------------------------------------------------------------------
 
 
-.btn {
-    display: block;
+.btn { 
     margin: 27px auto;
     color: white;
     background: linear-gradient(to top, $primary-color, $secondary-color);
@@ -12,5 +11,11 @@
     font-weight: $font-medium;
     height: 50px;
     padding: 13px 18px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
+    box-shadow: 0 4px 10px opacify($shadow-color, 0.1); /*0.1 */
+    opacity: 1;
+    transition: opacity 300ms ease-in-out;
+    &:hover { /*mais ça change aussi l'opacité du texte */
+        @include buttonhover;
+    }
 }
