--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 header {
     width: 100%;
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 2px 4px $shadow-color;
     padding: 10px 0;
     position: relative;
     z-index: 1;
