--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
+/* à revoir: hue saturation lightness opacity */
 /* Forms
    ========================================================================== */
-button,
-input {
+button {
   font-family: inherit;
   color: inherit;
   font-size: 100%;
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   min-height: 100vh; /* pour que le footer reste en bas avec margin-top auto */
   width: 100%;
-  max-width: 1180px; /* à vérifier qd je passerai en responsive */
+  max-width: 1920px; /* à vérifier qd je passerai en responsive */
 }
 
 *,
@@ -57,7 +57,7 @@ body {
 header {
   width: 100%;
   text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 4px hsla(0, 0%, 0%, 0.15);
   padding: 10px 0;
   position: relative;
   z-index: 1;
@@ -104,7 +104,6 @@ header {
 }
 
 .btn {
-  display: block;
   margin: 27px auto;
   color: white;
   background: linear-gradient(to top, #9356DC, #FF79DA);
@@ -112,7 +111,14 @@ header {
   font-weight: 500;
   height: 50px;
   padding: 13px 18px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*0.1 */
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+.btn:hover { /*mais ça change aussi l'opacité du texte */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.35);
+  opacity: 0.85;
 }
 
 h1 {
@@ -145,7 +151,7 @@ h3 {
 }
 .location p {
   font-weight: 500;
-  color: #353535;
+  color: hsl(0, 0%, 0%);
   margin-left: 17px;
 }
 
@@ -179,7 +185,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15); /* à revoir */
+  box-shadow: 0 4px 15px hsla(0, 0%, 0%, 0.15);
 }
 .search__link::before {
   content: counter(li);
@@ -229,10 +235,9 @@ h3 {
   background-color: white;
   border-radius: 15px;
   position: relative;
-  /*height: 251px;*/
 }
-.card img { /*revoir la hauteur de l'image */
-  height: 120px;
+.card img {
+  height: 175px;
   width: 100%;
   border-radius: 15px 15px 0 0;
 }
@@ -258,6 +263,48 @@ h3 {
 .card__new p {
   font-weight: 500;
   font-size: 0.9rem;
+}
+.card__icon {
+  position: absolute;
+  bottom: 33px;
+  right: 25px;
+  width: 22px;
+  height: 22px;
+}
+.card__icon input[type=checkbox] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  appearance: none;
+  /* For iOS < 15 to remove gradient background */
+  /*background-color: #fff; /*à revoir */
+  /* Not removed via appearance */
+  margin: 0;
+}
+.card__icon input[type=checkbox]::before {
+  display: block;
+  content: "";
+  background-image: url("../images/icons/heartempty.svg"); /*revoir le chemin */
+  background-size: 22px;
+  height: 22px;
+  width: 22px;
+}
+.card__icon input[type=checkbox]:checked::before {
+  display: inline-flex;
+  content: "";
+  background-image: url("../images/icons/heartfull.svg");
+  background-size: 22px;
+  height: 22px;
+  width: 22px;
+  animation: 300ms ease-in-out both animlove; /* pour Firefox */
+}
+
+@keyframes animlove {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
