--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,7 +28,7 @@ h3 {
     align-items: center;
     p {
         font-weight: $font-medium;
-        color: #353535;
+        color: $font-color-variant;
         margin-left: 17px;
     }
 }
@@ -62,7 +62,7 @@ h3 {
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15); /* à revoir */
+        box-shadow: 0 4px 15px $shadow-color; 
         &::before {
             content:counter(li);
             counter-increment: li;
@@ -117,9 +117,8 @@ h3 {
     background-color: white;
     border-radius: 15px;
     position: relative;
-    /*height: 251px;*/
-    img { /*revoir la hauteur de l'image */
-        height: 120px;
+    img { 
+        height: 175px;
         width: 100%;
         border-radius: 15px 15px 0 0;
     }
@@ -141,13 +140,54 @@ h3 {
         display: flex;
         justify-content: center;
         align-items: center;
-
+        
         p {
             font-weight: $font-medium;
             font-size: 0.9rem;
         }
     }
+    &__icon {
+        position: absolute;
+        bottom: 33px;
+        right: 25px; 
+        width: 22px;
+        height: 22px;
+        input[type="checkbox"] {
+            /* Add if not using autoprefixer */
+            -webkit-appearance: none;
+            appearance: none;
+            /* For iOS < 15 to remove gradient background */
+            /*background-color: #fff; /*à revoir */
+            /* Not removed via appearance */
+            margin: 0;
+            &::before {
+                display: block;
+                content:'';
+                background-image: url('../images/icons/heartempty.svg'); /*revoir le chemin */
+                background-size: 22px;
+                height: 22px;
+                width: 22px;
+            }
+            &:checked::before {
+                display: inline-flex;
+                content:'';
+                background-image: url('../images/icons/heartfull.svg');
+                background-size: 22px;
+                height: 22px;
+                width: 22px;
+                animation: 300ms ease-in-out both animlove; /* pour Firefox */
+            }
+        }
+    }
 }
 
+@keyframes animlove {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 
