--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -7,14 +7,22 @@
   font-weight: $font-bold;
 }
 
-
 @mixin buttonhover {
   box-shadow: 0 4px  15px opacify($shadow-color, 0.2); 
   opacity: 0.85; 
 }
 
+@mixin medium-screen {
+  @media screen and (min-width: $medium) {
+    @content;
+  }
+}
 
-
+@mixin large-screen {
+  @media screen and (min-width: $large) {
+    @content;
+  }
+}
 
 
 /// Event wrapper
