--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,7 +15,7 @@ $font-medium: 500;
 $font-bold: 700;
 
 /// Font colors
-$font-color-variant: hsla(0, 0, 0, 21); /* à revoir: hue saturation lightness opacity */
+$font-color-variant: hsla(0, 0%, 0%, 21); /* à revoir: hue saturation lightness opacity */
 
 
 /// Colors
@@ -27,18 +27,14 @@ $background-color: #F6F6F6;
 ///Shadow colors
 $shadow-color: hsla(0, 0%, 0%, 0.15);
 
+
 /// Container's maximum width
 $max-width: 1920px;
 
 
-
-/// Breakpoints map
-/// @prop {String} keys - Keys are identifiers mapped to a given length
-/// @prop {Map} values - Values are actual breakpoints expressed in pixels
-$breakpoints: (
-  'small': 320px,
-  'medium': 768px,
-  'large': 1024px,
-) !default;
+/// Breakpoints
+$small: 320px;
+$medium: 768px;
+$large: 1024px;
 
 
