--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   min-height: 100vh; /* pour que le footer reste en bas avec margin-top auto */
   width: 100%;
-  max-width: $max-width; /* à vérifier qd je passerai en responsive */
+  max-width: $max-width;
 }
 
 *,
