--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,7 +2,7 @@
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
 
-
+/***** BUTTON *****/
 .btn { 
     margin: 27px auto;
     color: white;
@@ -10,7 +10,7 @@
     border-radius: 25px;
     font-weight: $font-medium;
     height: 50px;
-    padding: 13px 18px;
+    padding: 13px 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
     box-shadow: 0 4px 10px opacify($shadow-color, 0.1); 
     opacity: 1;
