--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,4 +18,11 @@
     &:hover { /*mais ça change aussi l'opacité du texte */
         @include buttonhover;
     }
+    &__menu { /* revoir les marges */
+        display: block;
+        text-align: center;
+        width: fit-content;
+        padding: 13px 50px;
+        margin: 0 auto;
+    } 
 }
